jmita version 0.7.7 :
Taille maximal de la fenetre fixée.
Ajout de l'image de la télécommande

jmita version 0.7.6 :
bug fix : Correction de la location du clique droit

jmita version 0.7.5 :
bug fix : problème avec les arguments à espace

jmita version 0.7.4 :
bug fix : correction du build pour ajouter les images au jar

jmita version 0.7.3
bug fix : correction de version du package 

jmita version 0.7.2
bug fix : Correction de la version du jar

jmita2 version 0.7.1
bug fix : correction du lanceur linux

jmita2 version 0.7:
bug fix : correction du lanceur linux
création du .desktop

jmita2 version 0.6:
Version fonctionnelle pour l'upnp et le chromecast de jmita2. Airplay doit être mieux implémenté