@@ -1,3 +1,6 @@
+jmita version 0.7.8 :
+bug fix : bug d'affichage
+
 jmita version 0.7.7 :
 Taille maximal de la fenetre fixée.
 Ajout de l'image de la télécommande
